--- a/project/index.html
+++ b/project/index.html
@@ -16,34 +16,7 @@
     <!-- [4] a 모양 미리 만들어두기 -->
     
     <!-- [5] layout 영역 -->
-    <style>
-        .wrap {
-            border: 1px solid black;
-            box-sizing: border-box;
-        }
-        .wrap.header {
-            background: yellowgreen;
-        }
-        .wrap.content {
-            background: blanchedalmond;
-        }
-        .wrap.footer {
-            background: aquamarine;
-        }
-        
-        header, nav, #content, footer {
-            /* 중앙 정렬 방식 */
-            width: 80vw;
-            margin: 0 auto;
-
-            border: 1px solid black;
-        }
-
-        #content {
-            overflow: hidden;
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/jobkh.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
