--- a/project/index.html
+++ b/project/index.html
@@ -26,20 +26,20 @@
         </header>
         <nav>
             <div>
-                <div>
-                    <ul>
-                        <li><a href="#">개인</a></li>
-                        <li><a href="#">기업</a></li>
+                <div class="tab-menu">
+                    <ul class="tab-menu1">
+                        <li class="tab-menu1"><a href="#"># 공채속보</a></li>
+                        <li class="tab-menu1"><a href="#"># AI추천</a></li>
+                        <li class="tab-menu1"><a href="#"># 전문채용관</a></li>
+                        <li class="tab-menu1"><a href="#"># 기업·연봉</a></li>
+                        <li class="tab-menu1"><a href="#"># 진로탐색</a></li>
+                        <li class="tab-menu1"><a href="#"># 취업톡톡</a></li>
                     </ul>
                 </div>
                 <div>
-                    <ul>
-                        <li><a href="#">공채속보</a></li>
-                        <li><a href="#">AI추천</a></li>
-                        <li><a href="#">전문채용관</a></li>
-                        <li><a href="#">기업·연봉</a></li>
-                        <li><a href="#">진로탐색</a></li>
-                        <li><a href="#">취업톡톡</a></li>
+                    <ul class="tab-menu2">
+                        <li class="tab-menu2"><a href="#">개인</a></li>
+                        <li class="tab-menu2"><a href="#">기업</a></li>
                     </ul>
                 </div>
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -47,16 +47,20 @@
                       <div class="carousel-item active">
                         <ul>
                             <li>
-                                <span>이번주 공채</span>
-                                <h6>현대자동차 전략지원 총무기획</h6>
-                                <span>현대자동차</span>
-                                <span>D-18</span>
+                                <div class="box">
+                                    <span>이번주 공채</span>
+                                    <h4>현대자동차 전략지원 총무기획</h4>
+                                    <span>현대자동차</span>
+                                    <span>D-18</span>
+                                </div>
                             </li>
                             <li>
-                                <span>이번주 공채</span>
-                                <h4>컴투스 그룹 원클릭 특별채용</h4>
-                                <span>컴투스</span>
-                                <span>D-10</span>
+                                <div class="box">
+                                    <span>이번주 공채</span>
+                                    <h4>컴투스 그룹 원클릭 특별채용</h4>
+                                    <span>컴투스</span>
+                                    <span>D-10</span>
+                                </div>
                             </li>
                             <li>
                                 <span>이번주 공채</span>
