--- a/project/mainpage_body_.html
+++ b/project/mainpage_body_.html
@@ -178,6 +178,67 @@
             </section>
             <section class="sliderwrap">
                 <!--todo 슬라이더-->
+                <div>
+                    <div>
+                        <div>
+                            <div>
+                                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                      <button type="button">냠</button>
+                                        </div>
+                                      <div class="carousel-item">
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    <button type="button">냠</button>    
+                                    </div>
+                                      <div class="carousel-item">
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    <button type="button">냠
+                                    </button>  
+                                    </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             
             </section>
             <section class="VVIP 채용관">
