--- a/project/mainpage_body_.html
+++ b/project/mainpage_body_.html
@@ -43,7 +43,15 @@
             overflow: hidden;
             
         }
-   
+        #applyscrap button{
+        margin-right: 30px;
+        }
+
+        .game{
+            display: inline-flex;
+        }
+        
+
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -74,10 +82,10 @@
                         <div>
                             신입/경력 사원 공개채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
+                            <div style="display: inline;">D-8</div> 
                             <button onclick="">채용정보 스크랩</button>
-                            <div>D-8</div>
                         </div>
                     </li>
                     <li>
@@ -131,10 +139,10 @@
                         <div>
                             세아창원특수강 인사팀 경력 채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
+                            <div style="display: inline;">D-3</div> 
                             <button onclick="">채용정보 스크랩</button>
-                            <div>D-3</div>
                         </div>
                     </li>
                     <li>
@@ -162,15 +170,15 @@
                         </div>
                     </li>
                     <li>
-                        <div>
+                        <div id="applyscrap">
                             <img src="https://imgs.jobkorea.co.kr/Images/Logo/180/n/l/2293j00jcri6253_2020e7bel62392je.gif?p=y&hash=c&upddt=20230622165543" alt="">
                         </div>
                         <div>㈜넌럭셔리어스컴퍼니</div>
                         <div>[파파이스 코리아] 매장관리자(MGR) 채용(신입/경력/정규직)</div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
+                            <div style="display: inline;">D-8</div> 
                             <button onclick="">채용정보 스크랩</button>
-                            <div>D-8</div>
                         </div>
                     </li>
                 </ul>
@@ -275,7 +283,7 @@
                         <div>
                             신입/경력 사원 공개채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -332,7 +340,7 @@
                         <div>
                             세아창원특수강 인사팀 경력 채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-3</div>
@@ -368,7 +376,7 @@
                         </div>
                         <div>㈜넌럭셔리어스컴퍼니</div>
                         <div>[파파이스 코리아] 매장관리자(MGR) 채용(신입/경력/정규직)</div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -392,7 +400,7 @@
                         <div>
                             신입/경력 사원 공개채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -449,7 +457,7 @@
                         <div>
                             세아창원특수강 인사팀 경력 채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-3</div>
@@ -485,7 +493,7 @@
                         </div>
                         <div>㈜넌럭셔리어스컴퍼니</div>
                         <div>[파파이스 코리아] 매장관리자(MGR) 채용(신입/경력/정규직)</div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -509,7 +517,7 @@
                         <div>
                             신입/경력 사원 공개채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -566,7 +574,7 @@
                         <div>
                             세아창원특수강 인사팀 경력 채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-3</div>
@@ -602,7 +610,7 @@
                         </div>
                         <div>㈜넌럭셔리어스컴퍼니</div>
                         <div>[파파이스 코리아] 매장관리자(MGR) 채용(신입/경력/정규직)</div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -639,7 +647,7 @@
                         <div>
                             모니터랩
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             신입/경력 사원 공개채용
                         </div>
                         <div>
@@ -699,7 +707,7 @@
                         <div>
                             세아창원특수강 인사팀 경력 채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-3</div>
@@ -735,7 +743,7 @@
                         </div>
                         <div>㈜넌럭셔리어스컴퍼니</div>
                         <div>[파파이스 코리아] 매장관리자(MGR) 채용(신입/경력/정규직)</div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -759,7 +767,7 @@
                         <div>
                             신입/경력 사원 공개채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -816,7 +824,7 @@
                         <div>
                             세아창원특수강 인사팀 경력 채용
                         </div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-3</div>
@@ -852,7 +860,7 @@
                         </div>
                         <div>㈜넌럭셔리어스컴퍼니</div>
                         <div>[파파이스 코리아] 매장관리자(MGR) 채용(신입/경력/정규직)</div>
-                        <div>
+                        <div id="applyscrap">
                             <button onclick="">즉시지원</button>
                             <button onclick="">채용정보 스크랩</button>
                             <div>D-8</div>
@@ -861,9 +869,15 @@
                 </ul>
             </section>
             <section class="게임분야 채용정보">
-                <div>
+                <div class="game">
                     <h6>게임분야 채용정보</h6>
                     <button type="button">채용광고 더보기<i aria-hidden="true"></i></button>
+                    <ul class="gamelist">
+                        <li class="item">
+                            <div class="company bg1">
+                                <div class="logo"><img src="//www.gamejob.co.kr/Images/Booth/B_Logo/n2ohrr.gif" width="100" height="30" onerror="this.src='www.gamejob.co.kr/Images/Booth/B_Logo/Logo_None.gif';" alt="니트로스튜디오"></div>니트로스튜디오
+                            </div>
+                    </ul>
                 </div>
                 <div>
 
