nav 수정작업 진행

--- a/project/index.html
+++ b/project/index.html
@@ -123,7 +123,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Login/Login_TOT.asp?re_url=/" class="bnr-box blind-login devBnrBox" id="ortb-bannr-login" data-rcmdsvc-galabel="로그인" target="_self">
                                                         <img src="//i.jobkorea.kr/content/images/personal/main/ps_bnr1.png?202305180000" alt="로그인하면 합격률 높은 채용공고를 추천해드려요">
                                                     </a>
@@ -215,7 +215,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Top100/?Main_Career_Type=1&amp;Search_Type=1" class="bnr-box devBnrBox" data-rcmdsvc-galabel="일간 채용 TOP100_1">
                                                         <img src="//i.jobkorea.kr/content/images/personal/main/ps_bnr2.png" alt="채용 TOP100 실시간 인기 채용 공고를 확인해 보세요!">
                                                     </a>
@@ -293,9 +293,11 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <a href="/Top100" class="bnr-box devBnrBox" data-rcmdsvc-galabel="일간 채용 TOP100_2" target="_blank">
-                                                    <img src="//i.jobkorea.kr/content/images/personal/main/ps_bnr14.png" alt="다른공고 둘러보고 맞춤공고 추천받아보세요">
-                                                </a>
+                                                <div class="box-img">
+                                                    <a href="/Top100" class="bnr-box devBnrBox" data-rcmdsvc-galabel="일간 채용 TOP100_2" target="_blank">
+                                                        <img src="//i.jobkorea.kr/content/images/personal/main/ps_bnr14.png" alt="다른공고 둘러보고 맞춤공고 추천받아보세요">
+                                                    </a>
+                                                </div>
                                             </li>
                                             <li>
                                                 <div class="box">
@@ -380,9 +382,11 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <a href="/starter/interview" class="bnr-box devBnrBox" data-rcmdsvc-galabel="직무인터뷰 유도 배너" target="_blank">
-                                                    <img src="//i.jobkorea.kr/content/images/personal/main/ps_bnr4.png" alt="직업과 미래에 대한 고민 해결! 현직자들의 job 이야기">
-                                                </a>
+                                                <div class="box-img">
+                                                    <a href="/starter/interview" class="bnr-box devBnrBox" data-rcmdsvc-galabel="직무인터뷰 유도 배너" target="_blank">
+                                                        <img src="//i.jobkorea.kr/content/images/personal/main/ps_bnr4.png" alt="직업과 미래에 대한 고민 해결! 현직자들의 job 이야기">
+                                                    </a>
+                                                </div>
                                             </li>
                                             <li>
                                                 <div class="box">
@@ -456,7 +460,7 @@
                                     <div class="swiper-slide slide-box">
                                         <ul class="box-lst">
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Theme/ffsb" class="link" data-rcmdsvcagi-galabel="전문채용관" target="_blank">
                                                         <span class="img-box">
                                                             <img src="//file1.jobkorea.co.kr/Theme/ffsb/게이트_pc.png" alt="">
@@ -472,7 +476,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Theme/start_up" class="link" data-rcmdsvcagi-galabel="전문채용관" target="_blank">
                                                         <span class="img-box">
                                                             <img src="//file1.jobkorea.co.kr/Theme/start_up/스타트업-전용채용관PC_gate.png" alt="">
@@ -488,7 +492,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Theme/kotra" class="link" data-rcmdsvcagi-galabel="전문채용관" target="_blank">
                                                         <span class="img-box">
                                                             <img src="//file1.jobkorea.co.kr/Theme/kotra/2023_PC_gate.png" alt="">
@@ -504,7 +508,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Theme/RegionDSC" class="link" data-rcmdsvcagi-galabel="전문채용관" target="_blank">
                                                         <span class="img-box">
                                                             <img src="//file1.jobkorea.co.kr/Theme/RegionDSC/RegionDSC_GatePage.jpg" alt="">
@@ -524,7 +528,7 @@
                                     <div class="swiper-slide slide-box">
                                         <ul class="box-lst">
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Theme/Edu" class="link" data-rcmdsvcagi-galabel="전문채용관" target="_blank">
                                                         <span class="img-box">
                                                             <img src="//file1.jobkorea.co.kr/Theme/Edu/Edu_GatePage.jpg" alt="">
@@ -540,7 +544,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Theme/Const" class="link" data-rcmdsvcagi-galabel="전문채용관" target="_blank">
                                                         <span class="img-box">
                                                             <img src="//file1.jobkorea.co.kr/Theme/Const/Const_GatePage.jpg" alt="">
@@ -556,7 +560,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Theme/adagency" class="link" data-rcmdsvcagi-galabel="전문채용관" target="_blank">
                                                         <span class="img-box">
                                                             <img src="//file1.jobkorea.co.kr/Theme/adagency/PC_gate copy.png" alt="">
@@ -572,7 +576,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/FutureLab" class="bnr-box devBnrBox" data-rcmdsvc-galabel="퓨처랩">
                                                         <img src="//i.jobkorea.kr/content/images/personal/main/ps_bnr7.png" alt="취업정보를 한 곳에서 취업의 내비게이션 퓨쳐랩">
                                                     </a>
@@ -667,7 +671,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Review/Home" class="bnr-box devBnrBox" data-rcmdsvc-galabel="기업리뷰_1" target="_blank">
                                                         <img src="https://i.jobkorea.kr/content/images/personal/main/ps_bnr6.png" alt="경험해 본 사람들의 이야기 그 기업이 궁금할 땐 잡코리아 기업리뷰">
                                                     </a>
@@ -683,17 +687,16 @@
                                                             
                                                         </div>
                                                         <ul class="ms-ranking">
-                                                                    <li><span class="rank-num">1</span><span class="rank-name">프로테옴텍</span><span class="rank-view"><em>3,572</em>만원</span></li>
-                                                                    <li><span class="rank-num">2</span><span class="rank-name">라온시큐어</span><span class="rank-view"><em>5,689</em>만원</span></li>
-                                                                    <li><span class="rank-num">3</span><span class="rank-name">이스트소프트</span><span class="rank-view"><em>4,185</em>만원</span></li>
-                                                                    <li><span class="rank-num">4</span><span class="rank-name">㈜우분트월드</span><span class="rank-view"><em>2,841</em>만원</span></li>
-                                                                    <li><span class="rank-num">5</span><span class="rank-name">해안종합건축사사무소</span><span class="rank-view"><em>4,910</em>만원</span></li>
-                                                                    <li><span class="rank-num">6</span><span class="rank-name">서울메트로</span><span class="rank-view"><em>6,267</em>만원</span></li>
-                                                                    <li><span class="rank-num">7</span><span class="rank-name">데상트코리아</span><span class="rank-view"><em>5,208</em>만원</span></li>
-                                                                    <li><span class="rank-num">8</span><span class="rank-name">지멘스헬시니어스</span><span class="rank-view"><em>5,400</em>만원</span></li>
-                                                                    <li><span class="rank-num">9</span><span class="rank-name">풍인무역</span><span class="rank-view"><em>5,019</em>만원</span></li>
-                                                                    <li><span class="rank-num">10</span><span class="rank-name">㈜타라 티. 피. 에스</span><span class="rank-view"><em>4,393</em>만원</span></li>
-                        
+                                                                    <li><span class="rank-num">1 </span><span class="rank-name">프로테옴텍 </span><span class="rank-view"><em>3,572</em>만원</span></li>
+                                                                    <li><span class="rank-num">2 </span><span class="rank-name">라온시큐어 </span><span class="rank-view"><em>5,689</em>만원</span></li>
+                                                                    <li><span class="rank-num">3 </span><span class="rank-name">이스트소프트 </span><span class="rank-view"><em>4,185</em>만원</span></li>
+                                                                    <li><span class="rank-num">4 </span><span class="rank-name">㈜우분트월드 </span><span class="rank-view"><em>2,841</em>만원</span></li>
+                                                                    <li><span class="rank-num">5 </span><span class="rank-name">해안종합건축사사무소 </span><span class="rank-view"><em>4,910</em>만원</span></li>
+                                                                    <li><span class="rank-num">6 </span><span class="rank-name">서울메트로 </span><span class="rank-view"><em>6,267</em>만원</span></li>
+                                                                    <li><span class="rank-num">7 </span><span class="rank-name">데상트코리아 </span><span class="rank-view"><em>5,208</em>만원</span></li>
+                                                                    <li><span class="rank-num">8 </span><span class="rank-name">지멘스헬시니어스 </span><span class="rank-view"><em>5,400</em>만원</span></li>
+                                                                    <li><span class="rank-num">9 </span><span class="rank-name">풍인무역 </span><span class="rank-view"><em>5,019</em>만원</span></li>
+                                                                    <li><span class="rank-num">10 </span><span class="rank-name">㈜타라 티.피.에스 </span><span class="rank-view"><em>4,393</em>만원</span></li>
                                                         </ul>
                                                     </a>
                                                 </div>
@@ -768,7 +771,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/Top100/?Main_Career_Type=1&amp;Search_Type=1" class="bnr-box devBnrBox" data-rcmdsvc-galabel="일간 채용 TOP100_3" target="_blank">
                                                         <img src="https://i.jobkorea.kr/content/images/personal/main/ps_bnr5.png" alt="채용 TOP100 이번 주 가장 인기있는 공고!">
                                                     </a>
@@ -836,7 +839,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/starter/interview" class="bnr-box devBnrBox" data-rcmdsvc-galabel="직무인터뷰 유도 배너" target="_blank">
                                                         <img src="https://i.jobkorea.kr/content/images/personal/main/ps_bnr4.png" alt="직업과 미래에 대한 고민 해결! 현직자들의 job 이야기">
                                                     </a>
@@ -897,7 +900,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="box-double">
+                                                <div class="box-img">
                                                     <a href="/FutureLab" class="bnr-box devBnrBox" data-rcmdsvc-galabel="퓨처랩" target="_blank">
                                                         <img src="https://i.jobkorea.kr/content/images/personal/main/ps_bnr7.png" alt="취업정보를 한 곳에서 취업의 내비게이션 퓨쳐랩">
                                                     </a>
@@ -993,14 +996,14 @@
                         <div class="rcmd">
                             <p class="tit">추천 서비스</p>
                             <div class="tags blind">
-                                <p><a href="#">이직은 원픽</a></p>
-                                <p><a href="#">합격자소서</a></p>
-                                <p><a href="#">인적성·면접후기</a></p>
-                                <p><a href="#">공채달력</a></p>
-                                <p><a href="#">합격스펙</a></p>
-                                <p><a href="#">연봉검색순위</a></p>
-                                <p><a href="#">일간 채용 TOP100</a></p>
-                                <p><a href="#">이력서 다운로드</a></p>
+                                <p><a href="#"># 이직은 원픽</a></p>
+                                <p><a href="#"># 합격자소서</a></p>
+                                <p><a href="#"># 인적성·면접후기</a></p>
+                                <p><a href="#"># 공채달력</a></p>
+                                <p><a href="#"># 합격스펙</a></p>
+                                <p><a href="#"># 연봉검색순위</a></p>
+                                <p><a href="#"># 일간 채용 TOP100</a></p>
+                                <p><a href="#"># 이력서 다운로드</a></p>
                             </div>
                         </div>
                     </div>
@@ -1043,6 +1046,7 @@
             direction: 'horizontal',
             // spaceBetween: 50,
             centeredSlides: true,
+            watchOverflow : true,
             // slidesPerView: 1,
             navigation: {
                 nextEl: ".swiper-button-next",
