--- a/project/mainpage_body_.html
+++ b/project/mainpage_body_.html
@@ -20,109 +20,21 @@
     <!-- [4] a 모양 미리 만들어두기 -->
 
     <!-- [5] layout 영역 -->
-    <style>
-      .wrap {
-        border: 1px solid black;
-        box-sizing: border-box;
-      }
-      .wrap.header {
-        background: yellowgreen;
-      }
-      .wrap.content {
-        background: whitesmoke;
-      }
-      .wrap.footer {
-        background: aquamarine;
-      }
-
-      header,
-      nav,
-      #content,
-      footer {
-        /* 중앙 정렬 방식 */
-        width: 80vw;
-        margin: 0 auto;
-
-        border: 1px solid black;
-      }
-
-      #content {
-        overflow: hidden;
-      }
-      #applyscrap button {
-        margin-right: 30px;
-      }
-
-      .game {
-        display: inline-flex;
-      }
-      .scrap {
-        color: rgba(128, 128, 128, 0);
-        border: 1;
-        border-color: rgba(255, 235, 205, 0.5);
-        background-color: rgba(255, 235, 204, 0);
-        overflow: hidden;
-        width: 25px;
-        height: 25px;
-      }
-      .applydate {
-        display: inline;
-        font-size: 8px;
-      }
-      .applynow {
-        color: coral;
-        border-color: coral;
-        height: 20px;
-        width: 60px;
-        font-size: 8pt;
-        font-style: bold;
-        border-radius: 8px;
-        background-color: rgb(255, 238, 231);
-      }
-      li {
-        list-style: none;
-      }
-      .grid-container {
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        gap: 10px;
-        background-color: rgba(33, 150, 243, 0);
-        padding: 10px;
-        height: 650px;
-      }
-      .grid-container > li {
-        background-color: rgba(255, 235, 205, 0);
-        border: 1px solid black;
-        text-align: center;
-        font-size: 20px;
-        border-radius: 12px;
-      }
-
-      .imagebanner {
-        width: 100%;
-        display: flex;
-        padding: 0;
-        flex-direction: row;
-        justify-content: space-between;
-      }
-      #applyscrap {
-        display: flex;
-        justify-content: space-between;
-      }
-      .bannerwrap {
-        display: flex;
-        justify-content: space-between;
-      }
-      .bannerwrap button {
-        background-color: rgba(128, 128, 128, 0);
-        border: none;
-      }
-      .fa .fa-star {
-        font-size: 10px;
-        height: 10px;
-        width: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="css/jobkh_layout.css">
+    <!-- [6] header 영역 -->
+    <link rel="stylesheet" href="css/jobkh_header.css">
+    <!-- [7] nav 영역 -->
+    <link rel="stylesheet" href="css/jobkh_nav.css">
+    <!-- [8] main 영역 -->
+    <link rel="stylesheet" href="css/jobkh_main.css">
+    <!-- [9] footer 영역 -->
+    <link rel="stylesheet" href="css/jobkh_footer.css">
+    <!-- swiper css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <!-- 부트스트랩 css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- jQuery 스크립트 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
